.config/VSCodium/logs/20220615T213913/exthost1/output_logging_20220615T213933/4-Prettier.log
["INFO" - 9:39:42 PM] Extension Name: esbenp.prettier-vscode.
["INFO" - 9:39:42 PM] Extension Version: 9.5.0.
["INFO" - 10:02:34 PM] Formatting file:///home/upalb/Code/Cris-paul/index.html
["INFO" - 10:02:34 PM] Using ignore file (if present) at /home/upalb/Code/Cris-paul/.prettierignore
["INFO" - 10:02:34 PM] File Info:
{
  "ignored": false,
  "inferredParser": "html"
}
["INFO" - 10:02:34 PM] No local configuration (i.e. .prettierrc or .editorconfig) detected, falling back to VS Code configuration
["INFO" - 10:02:34 PM] Prettier Options:
{
  "arrowParens": "always",
  "bracketSpacing": true,
  "endOfLine": "lf",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxBracketSameLine": false,
  "jsxSingleQuote": false,
  "printWidth": 80,
  "proseWrap": "preserve",
  "quoteProps": "as-needed",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "es5",
  "useTabs": false,
  "vueIndentScriptAndStyle": false,
  "filepath": "/home/upalb/Code/Cris-paul/index.html",
  "parser": "html"
}
["ERROR" - 10:02:34 PM] Error formatting document.
["ERROR" - 10:02:34 PM] Unexpected closing tag "section". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (111:3)
  109 |     </div>
  110 |     <div class="swiper-pagination"></div>
> 111 |   </section>
      |   ^^^^^^^^^^
  112 |
  113 |   <!-- SERVICES -->
  114 |   <section class="services bg-dark">
SyntaxError: Unexpected closing tag "section". It may happen when the tag has already been closed by another tag. For more info see https://www.w3.org/TR/html5/syntax.html#closing-elements-that-have-implied-end-tags (111:3)
  109 |     </div>
  110 |     <div class="swiper-pagination"></div>
> 111 |   </section>
      |   ^^^^^^^^^^
  112 |
  113 |   <!-- SERVICES -->
  114 |   <section class="services bg-dark">
    at t (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/parser-html.js:4:2359)
    at MD (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/parser-html.js:36:6425)
    at gs (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/parser-html.js:36:7938)
    at Object.parse (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/parser-html.js:36:8710)
    at Object.parse (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/index.js:7330:23)
    at coreFormat (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/index.js:8641:18)
    at formatWithCursor2 (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/index.js:8833:18)
    at /home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/index.js:39137:12
    at Object.Success [as format] (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/node_modules/prettier/index.js:39151:12)
    at t.default.format (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/src/PrettierEditService.ts:463:45)
    at t.PrettierEditProvider.provideEdits (/home/upalb/.vscode-oss/extensions/esbenp.prettier-vscode-9.5.0/src/PrettierEditService.ts:322:22)
    at z.provideDocumentFormattingEdits (/opt/vscodium-bin/resources/app/out/vs/workbench/api/node/extensionHostProcess.js:83:105121)
["INFO" - 10:02:34 PM] Formatting completed in 0.246ms.
["INFO" - 10:02:41 PM] Formatting file:///home/upalb/Code/Cris-paul/js/index.js
["INFO" - 10:02:41 PM] Using ignore file (if present) at /home/upalb/Code/Cris-paul/.prettierignore
["INFO" - 10:02:41 PM] File Info:
{
  "ignored": false,
  "inferredParser": "babel"
}
["INFO" - 10:02:41 PM] No local configuration (i.e. .prettierrc or .editorconfig) detected, falling back to VS Code configuration
["INFO" - 10:02:41 PM] Prettier Options:
{
  "arrowParens": "always",
  "bracketSpacing": true,
  "endOfLine": "lf",
  "htmlWhitespaceSensitivity": "css",
  "insertPragma": false,
  "jsxBracketSameLine": false,
  "jsxSingleQuote": false,
  "printWidth": 80,
  "proseWrap": "preserve",
  "quoteProps": "as-needed",
  "requirePragma": false,
  "semi": true,
  "singleQuote": false,
  "tabWidth": 2,
  "trailingComma": "es5",
  "useTabs": false,
  "vueIndentScriptAndStyle": false,
  "filepath": "/home/upalb/Code/Cris-paul/js/index.js",
  "parser": "babel"
}
["INFO" - 10:02:41 PM] Formatting completed in 0.273ms.
